[FEAT] Switch feed search to Elasticsearch (nori) with index sync -1